<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" >

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:weightSum="1.0">
    
    <TableRow>
    <TextView
        android:id="@+id/textView0"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/chance_dozing" 
        android:textSize="25dp"
    	android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"/>
    </TableRow>
    
    <TableRow>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/epworth1" 
        android:textSize="18dp"
        android:layout_weight="1"
        android:gravity="center_vertical"/>
    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="16dp"/>
    </TableRow>

    <TableRow>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/epworth2" 
        android:textSize="18dp"
        android:layout_weight="1"
        android:gravity="center_vertical"/>
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="16dp" />
    </TableRow>

        
    <TableRow>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/epworth3"
        android:textSize="18dp"
        android:layout_weight="1"
        android:gravity="center_vertical"/>

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="16dp" />
    </TableRow>
        
    <TableRow>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/epworth4"
        android:textSize="18dp"
        android:layout_weight="1"
        android:gravity="center_vertical"/>

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="16dp" />
    </TableRow>
        
    <TableRow>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/epworth5"
        android:textSize="18dp"
        android:layout_weight="1"
        android:gravity="center_vertical"/>

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="16dp" />
    </TableRow>
        
    <TableRow>
    <TextView
        android:id="@+id/textView6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/epworth6"
        android:textSize="18dp"
        android:layout_weight="1"
        android:gravity="center_vertical"/>

    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="16dp" />
    </TableRow>
        
    <TableRow>
    <TextView
        android:id="@+id/textView7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/epworth7"
        android:textSize="18dp"
        android:layout_weight="1"
        android:gravity="center_vertical"/>

    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="16dp" />
    </TableRow>
        
    <TableRow>
    <TextView
        android:id="@+id/textView8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/epworth8"
        android:textSize="18dp"
        android:layout_weight="1"
        android:gravity="center_vertical"/>

    <Spinner
        android:id="@+id/spinner8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="16dp" />
    </TableRow>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="evalScore"
        android:text="@string/submit" />
    
</TableLayout>
</ScrollView>